Initialized Preprocessed Data

--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ filipineu.sublime-project
 filipineu.sublime-workspace
 
 #Philippine Tourism Parallel Corpus
-/data
+data/
 
 #Virtual Environment starter
 ./env.bat
