--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,12 @@
 argcomplete==1.9.2
 arghandler==1.2.0
-click==6.7
-colorama==0.3.9
-Flask==0.12.2
-Flask-Script==2.0.6
-itsdangerous==0.24
-Jinja2==2.9.6
-langdetect==1.0.7
-<<<<<<< HEAD
-=======
-logger==1.4
->>>>>>> module-preprocessing
-MarkupSafe==1.0
+dill==0.2.7.1
 nltk==3.2.5
-py==1.4.34
-pytest==3.2.3
-<<<<<<< HEAD
-=======
-pytest-flask==0.10.0
->>>>>>> module-preprocessing
+nose==1.3.7
+numpy==1.13.3
+prompter==0.3.10
+py==1.5.2
+pytest==3.2.5
+scipy==1.0.0
 six==1.11.0
-Werkzeug==0.12.2
+Theano==0.8.2
