--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 argcomplete==1.9.2
 arghandler==1.2.0
+click==6.7
+dill==0.2.7.1
+Flask==0.12.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
 nltk==3.2.5
 nose==1.3.7
 numpy==1.13.3
@@ -9,3 +15,4 @@ pytest==3.2.5
 scipy==1.0.0
 six==1.11.0
 Theano==1.0.0
+Werkzeug==0.12.2
