--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
 argcomplete==1.9.2
 arghandler==1.2.0
+bcrypt==3.1.4
+blinker==1.4
+certifi==2017.11.5
+cffi==1.11.2
+chardet==3.0.4
 click==6.7
-dill==0.2.7.1
-Flask==0.12.2
+Flask==0.10.1
+Flask-Admin==1.3.0
+Flask-Bcrypt==0.7.1
+Flask-DebugToolbar==0.10.0
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.1
+Flask-WTF==0.12
+gunicorn==19.4.5
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
@@ -11,8 +25,16 @@ nose==1.3.7
 numpy==1.13.3
 prompter==0.3.10
 py==1.5.2
+pycparser==2.18
 pytest==3.2.5
+pytz==2016.10
+requests==2.18.4
 scipy==1.0.0
 six==1.11.0
+SQLAlchemy==1.1.15
+structlog==16.1.0
+termcolor==1.1.0
 Theano==1.0.0
+urllib3==1.22
 Werkzeug==0.12.2
+WTForms==2.1
