--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,35 @@
 argcomplete==1.9.2
 arghandler==1.2.0
+Babel==2.5.1
 bcrypt==3.1.4
 blinker==1.4
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
 click==6.7
-Flask==0.10.1
+colorama==0.3.9
+defusedxml==0.5.0
+flasgger==0.8.0
+Flask==0.12.2
 Flask-Admin==1.3.0
+Flask-AppBuilder==1.9.6
+Flask-Babel==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.0
-Flask-Login==0.3.2
+Flask-Login==0.2.11
 Flask-Mail==0.9.1
+Flask-OpenID==1.2.5
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
-Flask-WTF==0.12
+Flask-WTF==0.14.2
 gunicorn==19.4.5
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
+langdetect==1.0.7
 MarkupSafe==1.0
+mistune==0.8.3
 nltk==3.2.5
 nose==1.3.7
 numpy==1.13.3
@@ -27,14 +37,18 @@ prompter==0.3.10
 py==1.5.2
 pycparser==2.18
 pytest==3.2.5
+python3-openid==3.1.0
 pytz==2016.10
+PyYAML==3.12
 requests==2.18.4
 scipy==1.0.0
 six==1.11.0
 SQLAlchemy==1.1.15
+SQLAlchemy-Utils==0.32.21
 structlog==16.1.0
 termcolor==1.1.0
 Theano==1.0.0
 urllib3==1.22
+uuid==1.30
 Werkzeug==0.12.2
 WTForms==2.1
