--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ argcomplete==1.9.2
 arghandler==1.2.0
 Babel==2.5.1
 bcrypt==3.1.4
+bleach==2.1.2
 blinker==1.4
 certifi==2017.11.5
 cffi==1.11.2
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
+decorator==4.2.1
 defusedxml==0.5.0
+entrypoints==0.2.3
 flasgger==0.8.0
 Flask==0.12.2
 Flask-Admin==1.3.0
@@ -23,32 +26,64 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
 gunicorn==19.4.5
+html5lib==1.0.1
 idna==2.6
+ipykernel==4.8.0
+ipython==6.2.1
+ipython-genutils==0.2.0
+ipywidgets==7.1.1
 itsdangerous==0.24
+jedi==0.11.1
 Jinja2==2.10
 jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.2
+jupyter-console==5.2.0
+jupyter-core==4.4.0
 langdetect==1.0.7
 MarkupSafe==1.0
 mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
 nltk==3.2.5
 nose==1.3.7
+notebook==5.3.1
 numpy==1.13.3
+pandocfilters==1.4.2
+parso==0.1.1
+pexpect==4.3.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 prompter==0.3.10
+ptyprocess==0.5.2
 py==1.5.2
 pycparser==2.18
+Pygments==2.2.0
 pytest==3.2.5
+python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2016.10
 PyYAML==3.12
+pyzmq==16.0.4
+qtconsole==4.3.1
 requests==2.18.4
 scipy==1.0.0
+Send2Trash==1.4.2
+simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.15
 SQLAlchemy-Utils==0.32.21
 structlog==16.1.0
 termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
 Theano==1.0.0
+tornado==4.5.3
+traitlets==4.3.2
 urllib3==1.22
 uuid==1.30
+wcwidth==0.1.7
+webencodings==0.5.1
 Werkzeug==0.12.2
+widgetsnbextension==3.1.3
 WTForms==2.1
